Adding a little explainer text at the bottom, just in case.

--- a/app/views/rater/index.html.erb
+++ b/app/views/rater/index.html.erb
@@ -31,8 +31,10 @@
       
     </div>
     
-    <div id="yay-space" class="col-xs-12">
-      <p>&nbsp;</p>
+    <div id="yay-space" class="col-xs-12 text-center">
+      <p></p>
+      <p>This is a silly project made by <a href="http://jonlim.ca">Jon Lim</a>. Check out the <a href="https://github.com/JonLim/hot-or-not">GitHub repo</a> to read more about it.</p>
+      <p></p>
     </div>
 
     <div id="stats-content" class="col-xs-6 col-xs-offset-3 hidden">
